# BBAI

./: README.md  UX_IMPROVEMENTS.md  main.py  plan.md  pyproject.toml  test-scope.yaml
docker/cloud/: Dockerfile
docker/content-discovery/: Dockerfile
docker/js-analysis/: Dockerfile
docker/recon-active/: Dockerfile
docker/recon-passive/: Dockerfile
docker/secrets/: Dockerfile
docker/visual/: Dockerfile
docker/vulnerability-core/: Dockerfile
src/bbai/: __init__.py  __main__.py
src/bbai/agent/: __init__.py  agent.py  tools.py
src/bbai/cli/: __init__.py  agent_commands.py  main.py  setup_wizard.py  shell.py  tools_commands.py
src/bbai/core/: __init__.py  config_models.py  rate_limiter.py  safety_guards.py  safety_manager.py  scope_engine.py  state_manager.py
src/bbai/llm/: __init__.py  client.py  factory.py  prompts.py  providers.py  schemas.py  thought_stream.py
src/bbai/orchestration/: __init__.py  graph.py  state.py
src/bbai/orchestration/nodes/: analysis.py  recon.py  reporting.py  safety.py  scanning.py
src/bbai/reporting/: __init__.py  hackerone.py  json_export.py  manager.py
src/bbai/tools/: __init__.py  docker_client.py  interfaces.py  registry.py
src/bbai/tools/parsers/: __init__.py  amass.py  base.py  nuclei.py  subfinder.py  trufflehog.py
src/bbai/tools/wrappers/: __init__.py  base.py  httpx.py  katana.py  nuclei.py  python_httpx.py  python_portscan.py  python_subdomain.py  python_vulnscan.py  python_webcrawl.py  registry.py  subfinder.py
tests/: __init__.py
tests/unit/: test_config_models.py  test_docker_client.py  test_llm.py  test_orchestration.py  test_parsers.py  test_rate_limiter.py  test_reporting.py  test_safety_guards.py  test_scope_engine.py  test_state_manager.py
