[project]
name = "bbai"
version = "0.1.0"
description = "Bug Bounty AI Agent - AI-driven security testing with intelligent tool orchestration"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "BBAI Team"}
]
keywords = ["bug-bounty", "security", "ai", "automation", "pentesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # CLI & Interface
    "typer>=0.12.3",
    "rich>=13.7.1",
    "prompt-toolkit>=3.0.0",
    "questionary>=2.0.1",
    
    # Data & Validation
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    
    # HTTP Client
    "httpx[http2]>=0.27.0",
    
    # LLM & AI
    "tenacity>=8.5.0",
    
    # Storage
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.31",
    
    # Security & Rate Limiting
    "aiolimiter>=1.1.0",
    "cryptography>=42.0.0",
    
    # Networking
    "dnspython>=2.6.0",
    
    # Utilities
    "pyyaml>=6.0.1",
    "pytz>=2024.1",
    "python-dotenv>=1.0.1",
    "orjson>=3.10.6",
    "validators>=0.28.0",
    "tldextract>=5.1.2",
    "publicsuffixlist>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.1",
]

[project.scripts]
bbai = "bbai.cli.main:app"

[project.urls]
Homepage = "https://github.com/devinfebrian/BBAI"
Repository = "https://github.com/devinfebrian/BBAI"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
resolution = "highest"
prerelease = "allow"

[tool.hatch.build.targets.wheel]
packages = ["src/bbai"]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py313"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "ASYNC", # flake8-async
]
ignore = [
    "E501",  # Line too long (handled by black)
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/bbai"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
